enable HoTT MDL viewer when source available